--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.squarerofls {
+  display: flex;
+  justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
